# shorter_url

./: Cargo.toml
app/: Cargo.toml
app/src/: db.rs  main.rs  short_code_generator.rs
db/: sqlite.db
server/: Cargo.toml
server/src/: db.rs  main.rs
