[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = [] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
toml = "0.8.0"
rand = "0.8.5"
clap = { version = "4.4.4", features = ["derive"] }
